--- a/config.org
+++ b/config.org
@@ -797,6 +797,15 @@ Cell +91 9496354518")
 (when (fboundp 'imagemagick-register-types)
   (imagemagick-register-types))
 #+END_SRC
+*** mu4e-alert
+#+BEGIN_SRC emacs-lisp
+(use-package mu4e-alert
+    :ensure t
+    :after mu4e
+    :hook ((after-init . mu4e-alert-enable-mode-line-display)
+           (after-init . mu4e-alert-enable-notifications))
+    :config (mu4e-alert-set-default-style 'libnotify))
+#+END_SRC
 ** beacon mode
 This package highlights the cursor every time it jumps abruptedly from a
 place to another (e.g. when changing windows and so on).
