--- a/config.org
+++ b/config.org
@@ -765,7 +765,7 @@ The non-mu4e-* stuff is inherited from emacs/message-mode
 (setq mu4e-get-mail-command "mbsync -c ~/.emacs.d/.mbsyncrc work"
       mu4e-html2text-command "w3m -T text/html")
 #+END_SRC
-*** DISABLED Auto-update
+*** Auto-update
 #+BEGIN_SRC emacs-lisp
 (setq mu4e-update-interval 120
       mu4e-headers-auto-update t)
@@ -919,7 +919,10 @@ Change terminal color and shape while using emacs in terminal
 #+BEGIN_SRC emacs-lisp
 (nvmap :prefix "SPC"
        "tt" 'yafolding-toggle-all
-       "te" 'yafolding-toggle-element)
+       "te" 'yafolding-toggle-element
+       "e"  'eval-buffer
+       "m"  'mu4e
+)
 
 ;; all keywords arguments are still supported
 (nvmap :prefix ","
@@ -935,7 +938,6 @@ Change terminal color and shape while using emacs in terminal
        "/"  'swiper            ;; Ag search from project's root
        ;; "y" 'yank-to-x-clipboard
        "o"  'delete-other-windows  ;; C-w o
-       "m"  'my-org-publish-buffer
 )
 #+END_SRC
 * Styling
