--- a/config.org
+++ b/config.org
@@ -845,6 +845,10 @@ Change terminal color and shape while using emacs in terminal
         (remove-hook 'elpy-modules 'elpy-module-flymake)
         (add-hook 'elpy-mode-hook 'flycheck-mode)))
 #+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+(add-hook 'elpy-mode-hook (lambda () (highlight-indentation-mode -1)))
+#+END_SRC
 ** yafolding
 #+BEGIN_SRC emacs-lisp
 (use-package yafolding
@@ -937,10 +941,13 @@ Change terminal color and shape while using emacs in terminal
 (toggle-scroll-bar -1)
 #+END_SRC
 ** Emacs Theme
-*** My favorite dark themes: 
-**** noctilux, oceanic-next, cyberpunk, material, wombat
+*** My favorite themes: 
+**** Dark themes
+***** noctilux, oceanic-next, cyberpunk, material, wombat
+**** Light themes
+***** leuven
 #+BEGIN_SRC emacs-lisp
-(use-package noctilux-theme
+(use-package leuven-theme
   :ensure t
 )
 #+END_SRC
