--- a/config.org
+++ b/config.org
@@ -775,6 +775,17 @@ The non-mu4e-* stuff is inherited from emacs/message-mode
 (setq mu4e-update-interval 120
       mu4e-headers-auto-update t)
 #+END_SRC
+*** Headers to show
+ The headers to show in the headers list -- a pair of a field and its
+ width, with `nil' meaning 'unlimited' (better only use that for the
+ last field.  These are the defaults:
+#+BEGIN_SRC emacs-lisp
+(setq mu4e-headers-fields
+    '( (:human-date          .  25)    ;; alternatively, use :human-date
+       (:flags         .   6)
+       (:from          .  22)
+       (:thread-subject       .  nil))) ;; alternatively, use :thread-subject
+#+END_SRC
 *** Email Signature
 #+BEGIN_SRC emacs-lisp
 (setq mu4e-compose-signature
