--- a/config.org
+++ b/config.org
@@ -725,6 +725,7 @@ mu index --maildir=~/mail/work
       mailpasswd() 
 #+END_SRC
 *** Outgoing mail settings
+**** Instructions on creating authinfo.gps in [[Method1][Password Management]]
 #+BEGIN_SRC emacs-lisp
 (require 'smtpmail)
 (setq send-mail-function  'smtpmail-send-it
